[package]
name = "match_analysis"
version = "0.1.0"
authors = ["Steven Pham <steven.pham.8.2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.115", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.57"

[profile.release]
debug = true

